--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -13,7 +13,10 @@ defmt = "0.1.2"
 defmt-rtt = "0.1.0"
 panic-probe = { version = "0.1.0", features = ["print-defmt"] }
 hal = { path = "../hal" }
-# nrf52840-hal = "0.11.0"
+
+[dependencies.embedded-hal]
+version = "0.2.4"
+features = ["unproven"]
 
 [features]
 # set logging levels here
