--- a/hal/Cargo.toml
+++ b/hal/Cargo.toml
@@ -6,4 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.embedded-hal]
+version = "0.2.4"
+features = ["unproven"]
+
+[dependencies.void]
+version = "1.0.2"
+default-features = false
+
+[dependencies.vcell]
+version = "0.1"
+
